Set coding standard. Build fat jar